<resources>
    <string name="app_name">ParkinsonDiseaseApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="fourth_fragment_label">Fourth Fragment</string>
    <string name="fifth_fragment_label">Fifth Fragment</string>
    <string name="btnStart">START</string>
    <string name="btnStop">STOP</string>
</resources>