<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.edu.parkinsondiseaseapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/to_left"
            app:popExitAnim="@anim/from_right" />
        <action
            android:id="@+id/action_FirstFragment_to_FourthFragment"
            app:destination="@id/FourthFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/to_left"
            app:popExitAnim="@anim/from_right" />
        <action
            android:id="@+id/action_FirstFragment_to_FifthFragment"
            app:destination="@id/FifthFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/to_left"
            app:popExitAnim="@anim/from_right" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.edu.parkinsondiseaseapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.edu.parkinsondiseaseapp.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third" />
    <fragment
        android:id="@+id/FourthFragment"
        android:name="com.edu.parkinsondiseaseapp.FourthFragment"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_fourth" />
    <fragment
        android:id="@+id/FifthFragment"
        android:name="com.edu.parkinsondiseaseapp.FifthFragment"
        android:label="@string/fifth_fragment_label"
        tools:layout="@layout/fragment_fifth" />
</navigation>